[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Font/GOLEMNOMICON_UI/Default_UI.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Overworld/AreaTitleCard.gd" type="Script" id=3]

[node name="AreaTitleCard" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="Label" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 40.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="OnScreenTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="OnScreenTimer" to="." method="_on_OnScreenTimer_timeout"]
